--- a/.github/workflows/create-aws-infra.yml
+++ b/.github/workflows/create-aws-infra.yml
@@ -9,6 +9,8 @@ jobs:
         steps:
             - name: Code checkout
               uses: actions/checkout@v4
+            - name: Show data
+              run: ls -lRt
             - name: Install terraform
               uses: hashicorp/setup-terraform@v3
             - name: Configure aws
