--- a/.github/workflows/create-aws-infra.yml
+++ b/.github/workflows/create-aws-infra.yml
@@ -24,5 +24,8 @@ jobs:
             - name: Access infra
               run: |
                 chmod 400 "tf-mkp-private.pem"
-                ssh -i "tf-mkp-private.pem" ubuntu@$(terraform output -raw public_ec_ip)
+                ssh -o StrictHostKeyChecking=no -i "tf-mkp-private.pem" ubuntu@$(terraform output -raw public_ec_ip)
                 ls -lrt
+            - name: Destory infra
+              if: always()
+              run: terraform destroy -auto-approve
